syntax = "proto3";

option csharp_namespace = "SynchronisationService.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package greet;

service SynchronisationService {

	rpc AddTemperatureReading(stream AddTemperatureReadingRequest) returns (google.protobuf.Empty);


}

message AddTemperatureReadingRequest {	
	google.protobuf.Timestamp RegisteredAt = 1;
	double temperature = 2;
}